zero-cost-templating/tests/ui/compile_fail/mismatched_types_unit.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/mismatched_types_unit.rs:18:5
   |
18 |     template.test_template6()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |     |
   |     expected `()`, found `Template<TestTemplate6, (), ()>`
   |
   = note: expected unit type `()`
                 found struct `Template<TestTemplate6, (), ()>`
